unpackaged/main/default/objects/ebcm__LogEvent__e/fields/ebcm__Message__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>