unpackaged/main/default/objects/ebcm__LogEvent__e/fields/ebcm__Type__c.field-meta.xml
<CustomField>
    <fullName>ebcm__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>